<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_config"
    tools:context="com.example.brazobtcom.configActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_nombre_mov"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Pulgar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_pulgar" />

        <TextView
            android:id="@+id/tv_valor_pulgar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_pulgar" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarPulgar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:progress="50"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_indice" />

        <TextView
            android:id="@+id/tv_valor_indice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_indice" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarIndice"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:progress="50"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_medio" />

        <TextView
            android:id="@+id/tv_valor_medio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_indice" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarMedio"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:progress="50"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_anular" />

        <TextView
            android:id="@+id/tv_valor_anular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_indice" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarAnular"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:progress="50"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_menique" />

        <TextView
            android:id="@+id/tv_valor_menique"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_indice" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarMenique"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:progress="50"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_guardar"/>

    <Button
        android:id="@+id/buttonNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_nuevo"/>

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_eliminar"/>
</LinearLayout>
